# hik_infrared

./: .env  .env.zp  .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: HikvisionCamera.cpp  HikvisionCamera.h  bindings.cpp  main.cpp  system.cpp  system.hpp  test_system.cpp  threadPool.hpp  upload.cpp  upload.hpp
workspace/: config.json
